# web-research-agent

./: app.py  install.sh  pyproject.toml  requirements.txt  utilities.py
.streamlit/: config.toml
elsai_core/extractors/: azure_document_intelligence.py
elsai_core/utilities/: splitters.py
elsai_core/vectordb/: chroma_vectordb.py
